appId: org.navoss.mobile
---
- launchApp:
    clearState: true
- openLink: 'exp+navoss://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081'
- waitForAnimationToEnd
- tapOn:
    text: 'Close'
    optional: true
- tapOn:
    text: 'Reload'
    optional: true
- extendedWaitUntil:
    visible: 'Search Calgary'
    timeout: 20000
- tapOn: 'Map appearance'
- assertVisible: 'Map appearance'
- assertVisible: 'Auto'
- assertVisible: 'Heading up'
- assertVisible: 'Tilted'
- tapOn: 'Night'
- tapOn: 'Flat'
- tapOn: 'Buildings'
- scrollUntilVisible:
    element:
      text: 'Camera markers'
    direction: DOWN
- tapOn: 'Camera markers'
- scrollUntilVisible:
    element:
      text: 'Blue route'
    direction: DOWN
- tapOn: 'Blue route'
- tapOn: 'Close map appearance'
- assertVisible: 'Search Calgary'
- tapOn: 'Map appearance'
- assertVisible:
    text: 'Night'
    selected: true
- assertVisible:
    text: 'Flat'
    selected: true
- scrollUntilVisible:
    element:
      text: 'Buildings'
    direction: DOWN
- assertVisible:
    text: 'Buildings'
    checked: false
- scrollUntilVisible:
    element:
      text: 'Camera markers'
    direction: DOWN
- assertVisible:
    text: 'Camera markers'
    checked: false
- scrollUntilVisible:
    element:
      text: 'Blue route'
    direction: DOWN
- assertVisible:
    text: 'Blue route'
    selected: true
- tapOn: 'Close map appearance'
- stopApp
- launchApp
- tapOn:
    text: '.*:8081'
    optional: true
- tapOn:
    text: 'Close'
    optional: true
- tapOn:
    text: 'Reload'
    optional: true
- extendedWaitUntil:
    visible: 'Search Calgary'
    timeout: 20000
- tapOn: 'Map appearance'
- assertVisible:
    text: 'Night'
    selected: true
- assertVisible:
    text: 'Flat'
    selected: true
- scrollUntilVisible:
    element:
      text: 'Buildings'
    direction: DOWN
- assertVisible:
    text: 'Buildings'
    checked: false
- scrollUntilVisible:
    element:
      text: 'Camera markers'
    direction: DOWN
- assertVisible:
    text: 'Camera markers'
    checked: false
- scrollUntilVisible:
    element:
      text: 'Blue route'
    direction: DOWN
- assertVisible:
    text: 'Blue route'
    selected: true
- tapOn: 'Close map appearance'
