appId: org.navoss.mobile
---
- launchApp:
    clearState: true
- openLink: 'exp+navoss://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081'
- waitForAnimationToEnd
- tapOn:
    text: 'Close'
    optional: true
- tapOn:
    text: 'Reload'
    optional: true
- extendedWaitUntil:
    visible: 'Search Calgary'
    timeout: 20000
- longPressOn:
    point: 78%,45%
- extendedWaitUntil:
    visible: 'Start navigation'
    timeout: 20000
- assertVisible: 'Dropped pin'
- assertVisible: 'Select fastest .* route, .*, .*'
