appId: org.navoss.mobile
---
- openLink: 'exp+navoss://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: 'Open|Bundling.*|Search places|Close|Continue'
    timeout: 10000
- runFlow:
    when:
      visible: 'Open'
    commands:
      - tapOn: 'Open'
- extendedWaitUntil:
    notVisible: 'Bundling.*'
    timeout: 60000
- runFlow:
    when:
      visible: 'Close'
    commands:
      - tapOn:
          point: '95%,7%'
- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn: 'Continue'
- runFlow:
    when:
      visible: 'Close'
    commands:
      - tapOn:
          point: '95%,7%'
- tapOn:
    text: 'Reload'
    optional: true
- extendedWaitUntil:
    visible: 'Continue|Search places'
    timeout: 20000
- runFlow:
    when:
      visible: 'Continue'
    commands:
      - tapOn: 'Continue'
- runFlow:
    when:
      visible: 'Close'
    commands:
      - tapOn:
          point: '95%,7%'
- extendedWaitUntil:
    visible: 'Search places'
    timeout: 20000
- tapOn: 'Search places'
- eraseText
- inputText: 'Airport'
- assertVisible: 'Select Calgary International Airport.*'
- tapOn: 'Select Calgary International Airport.*'
- extendedWaitUntil:
    visible: 'Directions'
    timeout: 10000
- tapOn: 'Directions'
- extendedWaitUntil:
    visible: 'Start navigation'
    timeout: 20000
- tapOn: 'Use car navigation marker'
- tapOn: 'Start navigation'
- assertVisible: 'End navigation'
- assertVisible: 'Share ETA'
- extendedWaitUntil:
    visible: '.*(Drive|Turn|Take|Continue).*'
    timeout: 20000
- tapOn: 'Share ETA'
- extendedWaitUntil:
    visible: 'Copy'
    timeout: 10000
- assertNotVisible: '.*Access Your Contacts.*'
- tapOn: 'Copy'
- assertVisible: 'Switch map to north up'
- tapOn: 'Switch map to north up'
- assertVisible: 'Switch map to heading up'
- tapOn: 'Switch map to heading up'
- assertVisible: 'Switch map to north up'
- swipe:
    start: 50%, 55%
    end: 20%, 55%
    duration: 800
- extendedWaitUntil:
    visible: 'Recenter map on vehicle'
    timeout: 5000
- tapOn: 'Recenter map on vehicle'
- assertNotVisible: 'Recenter map on vehicle'
