appId: org.navoss.mobile
---
- launchApp:
    clearState: true
- openLink: 'exp+navoss://expo-development-client/?url=http%3A%2F%2Flocalhost%3A8081'
- waitForAnimationToEnd
- tapOn:
    text: 'Close'
    optional: true
- tapOn:
    text: 'Reload'
    optional: true
- extendedWaitUntil:
    visible: 'Search places'
    timeout: 20000
- tapOn: 'Search places'
- eraseText
- inputText: 'Starbucks'
- extendedWaitUntil:
    visible: 'Select Starbucks.*away.*'
    timeout: 20000
- pressKey: Enter
- assertVisible: 'Show list'
- takeScreenshot: 'navoss-search-multiple-locations-map'
- tapOn: 'Show list'
- assertVisible: 'Select Starbucks.*away.*'
- takeScreenshot: 'navoss-search-multiple-locations'
