appId: org.navoss.mobile
---
- extendedWaitUntil:
    visible: "You've arrived"
    timeout: 20000
- assertVisible: 'Calgary International Airport'
- assertVisible: 'Finish navigation'
- takeScreenshot: '/tmp/navoss-validation-phone-arrival'
- tapOn: 'Finish navigation'
- extendedWaitUntil:
    visible: 'Search places'
    timeout: 10000
